; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/ia64/sn/kernel/sn2/extr_sn_hwperf.c_sn_hwperf_geoid_to_cnode.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/ia64/sn/kernel/sn2/extr_sn_hwperf.c_sn_hwperf_geoid_to_cnode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@num_cnodes = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @sn_hwperf_geoid_to_cnode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sn_hwperf_geoid_to_cnode(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  %15 = load i8*, i8** %3, align 8
  %16 = call i64 @sn_hwperf_location_to_bpos(i8* %15, i32* %7, i32* %8, i32* %9, i32* %10)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %19

18:                                               ; preds = %1
  store i32 -1, i32* %2, align 4
  br label %66

19:                                               ; preds = %1
  store i32 0, i32* %4, align 4
  br label %20

20:                                               ; preds = %54, %19
  %21 = load i32, i32* %4, align 4
  %22 = load i32, i32* @num_cnodes, align 4
  %23 = icmp slt i32 %21, %22
  br i1 %23, label %24, label %57

24:                                               ; preds = %20
  %25 = load i32, i32* %4, align 4
  %26 = call i32 @cnodeid_get_geoid(i32 %25)
  store i32 %26, i32* %5, align 4
  %27 = load i32, i32* %5, align 4
  %28 = call i32 @geo_module(i32 %27)
  store i32 %28, i32* %6, align 4
  %29 = load i32, i32* %6, align 4
  %30 = call i32 @MODULE_GET_RACK(i32 %29)
  store i32 %30, i32* %11, align 4
  %31 = load i32, i32* %6, align 4
  %32 = call i32 @MODULE_GET_BPOS(i32 %31)
  store i32 %32, i32* %12, align 4
  %33 = load i32, i32* %5, align 4
  %34 = call i32 @geo_slot(i32 %33)
  store i32 %34, i32* %13, align 4
  %35 = load i32, i32* %5, align 4
  %36 = call i32 @geo_slab(i32 %35)
  store i32 %36, i32* %14, align 4
  %37 = load i32, i32* %7, align 4
  %38 = load i32, i32* %11, align 4
  %39 = icmp eq i32 %37, %38
  br i1 %39, label %40, label %53

40:                                               ; preds = %24
  %41 = load i32, i32* %8, align 4
  %42 = load i32, i32* %12, align 4
  %43 = icmp eq i32 %41, %42
  br i1 %43, label %44, label %53

44:                                               ; preds = %40
  %45 = load i32, i32* %9, align 4
  %46 = load i32, i32* %13, align 4
  %47 = icmp eq i32 %45, %46
  br i1 %47, label %48, label %53

48:                                               ; preds = %44
  %49 = load i32, i32* %10, align 4
  %50 = load i32, i32* %14, align 4
  %51 = icmp eq i32 %49, %50
  br i1 %51, label %52, label %53

52:                                               ; preds = %48
  br label %57

53:                                               ; preds = %48, %44, %40, %24
  br label %54

54:                                               ; preds = %53
  %55 = load i32, i32* %4, align 4
  %56 = add nsw i32 %55, 1
  store i32 %56, i32* %4, align 4
  br label %20

57:                                               ; preds = %52, %20
  %58 = load i32, i32* %4, align 4
  %59 = call i64 @cnode_possible(i32 %58)
  %60 = icmp ne i64 %59, 0
  br i1 %60, label %61, label %63

61:                                               ; preds = %57
  %62 = load i32, i32* %4, align 4
  br label %64

63:                                               ; preds = %57
  br label %64

64:                                               ; preds = %63, %61
  %65 = phi i32 [ %62, %61 ], [ -1, %63 ]
  store i32 %65, i32* %2, align 4
  br label %66

66:                                               ; preds = %64, %18
  %67 = load i32, i32* %2, align 4
  ret i32 %67
}

declare dso_local i64 @sn_hwperf_location_to_bpos(i8*, i32*, i32*, i32*, i32*) #1

declare dso_local i32 @cnodeid_get_geoid(i32) #1

declare dso_local i32 @geo_module(i32) #1

declare dso_local i32 @MODULE_GET_RACK(i32) #1

declare dso_local i32 @MODULE_GET_BPOS(i32) #1

declare dso_local i32 @geo_slot(i32) #1

declare dso_local i32 @geo_slab(i32) #1

declare dso_local i64 @cnode_possible(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
